--- a/public/style.css
+++ b/public/style.css
@@ -70,8 +70,9 @@ button:hover {
   box-shadow: none;
   box-sizing: border-box;
   display: block;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
   font-size: 14px;
   line-height: 27px;
   outline: 0;
@@ -92,7 +93,8 @@ button:hover {
   font-weight: 100;
   position: relative;
   overflow: hidden;
-  transition: border 0.2s, background 0.2s, color 0.2s ease-out, box-shadow 0.2s ease;
+  transition: border 0.2s, background 0.2s, color 0.2s ease-out,
+    box-shadow 0.2s ease;
   border-radius: 5px;
   white-space: nowrap;
   line-height: 0;
@@ -225,6 +227,8 @@ img {
   margin-bottom: 50px;
   transition: all 0.2s ease;
   max-width: 100%;
+  line-height: 0;
+  overflow: hidden;
 }
 
 .image-wrapper:hover {
